# My-Project

./: .gitignore  .gitmodules  CMakeLists.txt  MyProjectConfig.h.in  Readme.md  build.sh  configure.sh  main.cpp  run.sh  run_test.sh
Definitions/FlatBufferDef/: example.fbs
Module1/: CMakeLists.txt
Module1/src/: CMakeLists.txt  NearlyMath.cpp  NearlyMath.hpp
Module1/test/: CMakeLists.txt  NearlyMath_tests.cpp
Module2/: CMakeLists.txt
Module2/test/: CMakeLists.txt  Module2_test.cpp
